services/arr/sonarr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: intranet-ca
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "from rules"
      secretName: "sonarr-tls"
  rules:
    - host: "sonarr.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: webui
